--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
        <div class="xlsmall"><img src="images/G.jpg" alt=""></div>
    <div class="xlsmall"><img src="images/G.jpg" alt=""></div>
 
- 
-
   </div>
+  <a href="gridleyout.html">next hlml</a>
 </body>
 </html>
